<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <ImageView
            android:id="@+id/appImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appImageView"
            app:layout_constraintBottom_toTopOf="@id/bmiEditTextLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp"
                        android:hint="@string/name"
                        android:inputType="textPersonName|textCapWords"
                        fontPath="fonts/roboto/Roboto-Regular.ttf"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthdayEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthdayEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp"
                        android:hint="@string/birthday"
                        android:inputType="none"
                        android:focusable="false"
                        fontPath="fonts/roboto/Roboto-Regular.ttf"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/heightEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.463"
                    app:layout_constraintTop_toBottomOf="@id/birthdayEditTextLayout"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/heightEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp"
                        android:hint="@string/height"
                        android:inputType="numberDecimal"
                        fontPath="fonts/roboto/Roboto-Regular.ttf"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/cmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cm"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/heightEditTextLayout"
                    app:layout_constraintBottom_toBottomOf="@id/heightEditTextLayout"
                    fontPath="fonts/roboto/Roboto-Regular.ttf"
                    tools:ignore="MissingPrefix"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weightEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.463"
                    app:layout_constraintTop_toBottomOf="@id/birthdayEditTextLayout"
                    app:layout_constraintStart_toEndOf="@id/heightEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weightEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal"
                        fontPath="fonts/roboto/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/kgTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/kg"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/weightEditTextLayout"
                    app:layout_constraintBottom_toBottomOf="@id/weightEditTextLayout"
                    fontPath="fonts/roboto/Roboto-Regular.ttf"
                    tools:ignore="MissingPrefix"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emergencyContactEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/heightEditTextLayout"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emergencyContactEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp"
                        android:hint="@string/emergency_contact"
                        android:inputType="phone"
                        fontPath="fonts/roboto/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.463"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp"
                android:hint="@string/gender"
                android:inputType="none"
                android:focusable="false"
                fontPath="fonts/roboto/Roboto-Regular.ttf"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bmiEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.463"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            app:layout_constraintStart_toEndOf="@id/genderEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bmiEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp"
                android:hint="@string/bmi"
                android:inputType="none"
                android:focusable="false"
                fontPath="fonts/roboto/Roboto-Regular.ttf"
                tools:ignore="MissingPrefix"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/appGreen"
            android:text="@string/update"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintTop_toBottomOf="@id/bmiEditTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            fontPath="fonts/roboto/Roboto-Regular.ttf"
            tools:ignore="MissingPrefix"/>

</androidx.constraintlayout.widget.ConstraintLayout>